force-app/main/default-backup/objects/Agr_CBLCBlock__c/Agr_CBLCBlock__c.object-meta.xml
<CustomObject>
    <label>Bloqueio do CBLC</label>
    <nameField>
        <label>Tipo de Bloqueio</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bloqueios do CBLC</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>