force-app/main/default-backup/objects/Agr_CBLCBlock__c/fields/Agr_CBLCId__c.field-meta.xml
<CustomField>
    <fullName>Agr_CBLCId__c</fullName>
    <label>CBLC</label>
    <referenceTo>Agr_CBLC__c</referenceTo>
    <relationshipLabel>Bloqueios do CBLC</relationshipLabel>
    <relationshipName>Bloqueios_do_CBLC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>