force-app/main/default-backup/objects/Agr_CBLCBlock__c/fields/Agr_Comments__c.field-meta.xml
<CustomField>
    <fullName>Agr_Comments__c</fullName>
    <label>Observação</label>
    <length>300</length>
    <type>LongTextArea</type>
</CustomField>