force-app/main/default-backup/objects/Agr_CBLCBlock__c/fields/Agr_Date__c.field-meta.xml
<CustomField>
    <fullName>Agr_Date__c</fullName>
    <label>Data de Bloqueio</label>
    <type>Date</type>
</CustomField>