force-app/main/default-backup/objects/Agr_CBLCBlock__c/fields/Agr_Motive__c.field-meta.xml
<CustomField>
    <fullName>Agr_Motive__c</fullName>
    <label>Motivo</label>
    <length>100</length>
    <type>Text</type>
</CustomField>